Validation du : 7 Nov 2023  21:07

--- a/bookhotel.html
+++ b/bookhotel.html
@@ -14,8 +14,7 @@
 
     <header class="shadow-lg rounded">
         <h1>BOOKING HOTEL</h1>
-        <h4>Indiquez vos dates de réservation</h4>
-        <h4>Toute annulation doit se faire 48h avant</h4>
+        <h2>Indiquez vos dates de réservation - Toute annulation doit se faire 48h avant</h2>
     </header>
 
     <div class="container-fluid fs-3">        
@@ -89,7 +88,9 @@
                         </p>
                     </section>
             </div>
-
+            <footer>
+                <h2 class="jaune">Indiquez vos dates de réservation - Toute annulation doit se faire avant 48h</h2>
+            </footer>
     <script type="text/javascript" src="hotelbooking.js"></script> 
 </body>
 </html>
